completing beer service, cleanup - closes #18
