# brewery-api-model/src/main/java/guru/sfg/brewery/model/BeerPagedList.java
@@ -22,12 +22,12 @@ import org.springframework.data.domain.Pageable;
 
 import java.util.List;
 
-public class BeerPagedList extends PageImpl<Beer> {
-    public BeerPagedList(List<Beer> content, Pageable pageable, long total) {
+public class BeerPagedList extends PageImpl<BeerDto> {
+    public BeerPagedList(List<BeerDto> content, Pageable pageable, long total) {
         super(content, pageable, total);
     }
 
-    public BeerPagedList(List<Beer> content) {
+    public BeerPagedList(List<BeerDto> content) {
         super(content);
     }
 }
