# brewery-beer-service/src/main/java/guru/sfg/brewery/controllers/BeerController.java
@@ -1,0 +1,73 @@
+/*
+ *  Copyright 2019 the original author or authors.
+ *
+ * This program is free software: you can redistribute it and/or modify
+ *     it under the terms of the GNU General Public License as published by
+ *     the Free Software Foundation, either version 3 of the License, or
+ *     (at your option) any later version.
+ *
+ *     This program is distributed in the hope that it will be useful,
+ *     but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *     GNU General Public License for more details.
+ *
+ *     You should have received a copy of the GNU General Public License
+ *     along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
+
+package guru.sfg.brewery.controllers;
+
+import guru.sfg.brewery.model.BeerDto;
+import guru.sfg.brewery.model.BeerPagedList;
+import guru.sfg.brewery.model.BeerStyleEnum;
+import guru.sfg.brewery.services.BeerService;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+
+import java.util.UUID;
+
+@RequestMapping("/api/v1/beer")
+@Controller
+public class BeerController {
+
+    private final Integer DEFAULT_PAGE_NUMBER = 0;
+    private final Integer DEFAULT_PAGE_SIZE = 25;
+
+    private final BeerService beerService;
+
+    public BeerController(BeerService beerService) {
+        this.beerService = beerService;
+    }
+
+    @GetMapping(produces = { "application/json" })
+    ResponseEntity<BeerPagedList> listBeers(@RequestParam(value = "pageNumber", required = false) Integer pageNumber,
+                                                  @RequestParam(value = "pageSize", required = false) Integer pageSize,
+                                                  @RequestParam(value = "beerName", required = false) String beerName,
+                                                  @RequestParam(value = "beerStyle", required = false) BeerStyleEnum beerStyle){
+        if (pageNumber == null || pageNumber < 0){
+            pageNumber = DEFAULT_PAGE_NUMBER;
+        }
+
+        if (pageSize == null || pageSize < 1) {
+            pageSize = DEFAULT_PAGE_SIZE;
+        }
+
+        BeerPagedList beerList = beerService.listBeers(beerName, beerStyle, PageRequest.of(pageNumber, pageSize));
+
+        return new ResponseEntity<>(beerList, HttpStatus.OK);
+    }
+
+    @GetMapping(path = {"/{beerId}"},produces = { "application/json" })
+    ResponseEntity<BeerDto>  getBeerById(@PathVariable("beerId") UUID beerId){
+
+        //todo impl
+
+        return new ResponseEntity<BeerDto>(beerService.findBeerById(beerId), HttpStatus.OK);
+    }
+}
