# brewery/src/main/resources/openapi.yaml
@@ -28,8 +28,8 @@ servers:
     -   url: http://localhost:8080
         description: Local Host
 tags:
-    -   name: Beer
-        description: Beer Operations
+    -   name: BeerDto
+        description: BeerDto Operations
     -   name: Customer
         description: Customer Operations
     -   name: Order
@@ -39,7 +39,7 @@ paths:
         get:
             description: List Beers
             tags:
-                - Beer
+                - BeerDto
             responses:
                 '200':
                     description: List Beers Response
@@ -53,9 +53,9 @@ paths:
         parameters:
             -   $ref: "#/components/parameters/BeerId"
         get:
-            description: Get Beer by Id
+            description: Get BeerDto by Id
             tags:
-                - Beer
+                - BeerDto
             responses:
                 '200':
                     description: List Beers Response
@@ -240,7 +240,7 @@ components:
         BeerId:
             name: beerId
             in: path
-            description: Beer Id
+            description: BeerDto Id
             required: true
             schema:
                 type: string
